--- a/intropipeline.yml
+++ b/intropipeline.yml
@@ -2,7 +2,6 @@ name: intropipeline-env
 channels:
   - conda-forge
   - bioconda
-  - defaults
 channel_priority: strict
 
 dependencies:
@@ -11,7 +10,7 @@ dependencies:
   - minimap2=2.28
   - samtools=1.20
   - bcftools=1.20
-  - freec=11.6
+  - control-freec=11.6
   - sambamba=1.0.1
 
   # R base (compatible with Bioconductor 3.20)
@@ -28,8 +27,8 @@ dependencies:
   - r-r.filesets
 
   # Bioconductor 3.20 packages
-  - bioconductor-genomicranges=1.56.*
-  - bioconductor-rtracklayer=1.64.*
+  - bioconductor-genomicranges=1.58.0
+  - bioconductor-rtracklayer=1.66.0
 
   # System libraries
   - libxml2
