--- a/intropipeline.yml
+++ b/intropipeline.yml
@@ -25,6 +25,11 @@ dependencies:
   - r-dplyr
   - r-r.utils
   - r-r.filesets
+  - r-seqinr
+  - r-R.filesets
+  - r-purrr
+  - r-GenomicRanges
+  - r-dplyr
 
   # Bioconductor 3.20 packages
   - bioconductor-genomicranges=1.58.0
