--- a/intropipeline.yml
+++ b/intropipeline.yml
@@ -27,12 +27,12 @@ dependencies:
   - r-seqinr
   - r-R.filesets
   - r-purrr
-  - r-GenomicRanges
   - r-dplyr
 
   # Bioconductor 3.20 packages
   - bioconductor-genomicranges=1.58.0
   - bioconductor-rtracklayer=1.66.0
+  - bioconductor-genomicranges
 
   # System libraries
   - libxml2
